# soma-audit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml
.playwright-mcp/: page-2026-06-26T07-32-01-647Z.yml  page-2026-06-26T07-32-33-228Z.yml  page-2026-06-26T07-32-48-171Z.yml  page-2026-06-26T07-33-00-428Z.yml  page-2026-06-26T07-33-31-108Z.yml  page-2026-06-26T07-33-54-364Z.yml  page-2026-06-26T07-34-04-302Z.yml  page-2026-06-26T07-34-09-609Z.yml  page-2026-06-26T07-35-17-643Z.yml
crates/soma-audit-client/: Cargo.toml  README.md
crates/soma-audit-client/migrations/: migration-order.yaml
crates/soma-audit-client/migrations/00_setup/: 01_schema.sql
crates/soma-audit-client/migrations/01_migrated/1/: 20260626_01_outbox.sql
crates/soma-audit-client/migrations/01_migrated/2/: 20260626_02_dead-letter.sql
crates/soma-audit-client/src/: error.rs  lib.rs  outbox.rs  relay.rs
crates/soma-audit-client/tests/: outbox.rs
crates/soma-audit-core/: Cargo.toml  README.md
crates/soma-audit-core/src/: chain.rs  error.rs  event.rs  keys.rs  lib.rs  seal.rs  verify.rs
crates/soma-audit-pg/: Cargo.toml  README.md
crates/soma-audit-pg/migrations/: migration-order.yaml
crates/soma-audit-pg/migrations/00_setup/: 01_schema.sql
crates/soma-audit-pg/migrations/01_migrated/1/: 20260626_01_audit-events.sql
crates/soma-audit-pg/migrations/01_migrated/2/: 20260626_02_audit-chain-seals.sql
crates/soma-audit-pg/migrations/01_migrated/3/: 20260626_03_idempotency-scope.sql
crates/soma-audit-pg/migrations/01_migrated/4/: 20260626_04_seal-unique.sql
crates/soma-audit-pg/migrations/01_migrated/5/: 20260626_05_sources.sql
crates/soma-audit-pg/migrations/01_migrated/6/: 20260626_06_source-keys.sql
crates/soma-audit-pg/src/: error.rs  install.rs  keys.rs  lib.rs  sink.rs
crates/soma-audit-pg/tests/: integration.rs
crates/soma-audit-server/: Cargo.toml  README.md
crates/soma-audit-server/src/: auth.rs  error.rs  ingest.rs  lib.rs  main.rs  portal.rs  query.rs  routes.rs  seal.rs  source_keys.rs  sources.rs  state.rs
dashboard/: Cargo.toml  index.html
dashboard/src/: api.rs  app.rs  main.rs  util.rs
dashboard/src/pages/: audit.rs  keys.rs  mod.rs  seals.rs  sources.rs  verify.rs
deploy/: .env.example  DEMO.md  Dockerfile  Dockerfile.dockerignore  docker-compose.demo.yml  docker-compose.yml
docs/: CENTRAL.md  INTEGRATION.md  OPERATIONS.md  PUBLISHING.md  READINESS.md  REVIEW.md  soma-audit-architecture.md
examples/notes-app/: Cargo.toml  README.md
examples/notes-app/src/: main.rs
website/: index.html  script.js  styles.css
