[workspace]
# Empty workspace table marks this as a standalone crate, NOT part of the
# soma-audit workspace that lives two levels up.

[package]
name = "notes-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notes-app"
path = "src/main.rs"

[dependencies]
# soma-audit — two path deps, the only lines your app needs to add
soma-audit-pg   = { path = "../../crates/soma-audit-pg" }
soma-audit-core = { path = "../../crates/soma-audit-core" }

# Web framework
axum      = "0.8"
tokio     = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "json",
] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers / time
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
